# DIEU-KHIEN-DRONE-THEO-QUY-DAO

./: README.md  package.xml  setup.py
launch/: offboard_velocity_control.launch.py
px4_offboard/: control.py  processes.py  velocity_control.py  visualizer.py
