<?xml version="1.0"?>
<package format="3">
  <name>px4_offboard</name>
  <version>0.0.0</version>
  <description>ROS2 PX4 Interface Velocity Control</description>
  <maintainer email="thanhhuy180904@gmail.com">Huy</maintainer>
  <license>BSD-3</license>
  
  <depend>px4_msgs</depend>
  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
